crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc1_blaster_master.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-001-MMC1/Blaster Master.nes
rom_sha256=cff26469090708d1a73e4e65d47decf99a3d3eaf8a410200954cf54d4fcb1035
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=19df96da4938a5bb
checkpoint f600 fb_fnv1a64=20cb9e517dd5a2fa
