crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc1_dr_mario.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-001-MMC1/Dr. Mario.nes
rom_sha256=92f22e59935ca74a05f4ba60d70dfbc299d7d1a3e944c15b0c4a6b449cfeebcf
frames=600
fb_bytes=245760
cycles=17838526
audio_samples=439524
audio_fnv1a64=3b7f6c5ab179abd2
checkpoint f600 fb_fnv1a64=ab4ac82595be898f
