crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc1_dragon_warrior.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-001-MMC1/Dragon Warrior.nes
rom_sha256=bed8bfc77639b1ec9c3bf3cbd467a49728b9ea12c4adf12dc14d2f3cdcf8a2c4
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=3fbd121ae8b40537
checkpoint f600 fb_fnv1a64=0d2edf093d2b4052
